fix broken css

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,16 +1,11 @@
-body {
-  margin: 0;
-}
-
 .main {
   height: fit-content;
   width: fit-content;
 
   margin: 5rem auto;
-  margin: 0;
 }
+
 canvas {
   background-color: #dfe6ff;
   border: 4px solid #afafaf;
-  border: 0;
 }
